--- a/input.html
+++ b/input.html
@@ -69,7 +69,7 @@
                     <!-- input price -->
                     <div class="input-group mb-3 tip-group">
                         <span class="input-group-text bg-label bdy fw-bolder">$</span>
-                        <input type="number" class="form-control bg-field  bdy"
+                        <input type="number" min=1 class="form-control bg-field  bdy"
                             aria-label="Amount (to the nearest dollar)" id="price" name="price">
                     </div>
 
