--- a/input.html
+++ b/input.html
@@ -11,7 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>新增記帳</title>
+    <title>新增記錄</title>
 </head>
 
 <div class="loading">
@@ -38,25 +38,25 @@
             <article id="" class="my-5">
                 <!-- new income or outcome -->
                 <div class="d-flex justify-content-center">
-                    <input type="button" class="btn new-outcome fw-bold col-6" name="in-out" id="outcome" value="新增支出"
-                        cSwitch="支出">
-                    <input type="button" class="btn new-income fw-bold col-6" name="in-out" id="income" value="新增收入"
-                        cSwitch="收入">
+                    <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top" name="in-out" id="outcome"
+                        value="新增支出" cSwitch="支出">
+                    <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top" name="in-out" id="income"
+                        value="新增收入" cSwitch="收入">
                 </div>
 
-                <div class="container hide rounded bg-form p-3">
-                    <!-- choose type -->
+                <div class="container rounded-bottom bg-form p-3">
+                    <!-- choose categ -->
                     <p class="mb-1 fw-bolder">分類</p>
                     <div class="input-group mb-3 tip-group">
                         <div class="d-flex justify-content-start align-items-center flex-wrap form-control minh-150 bg-field border-0"
-                            id="TYPE">
-                            <!-- <input type="radio" class="btn-check form-check-input" name="come-type" id="come-type1"
+                            id="CATEG">
+                            <!-- <input type="radio" class="btn-check form-check-input" name="come-categ" id="come-categ1"
                                 autocomplete="off" value="飲食">
-                            <label class="btn btn-secondary input-group-text" for="come-type1">飲食</label>
+                            <label class="btn btn-secondary input-group-text" for="come-categ1">飲食</label>
 
-                            <input type="radio" class="btn-check form-check-input" name="come-type" id="come-type2"
+                            <input type="radio" class="btn-check form-check-input" name="come-categ" id="come-categ2"
                                 autocomplete="off" value="居家">
-                            <label class="btn btn-secondary input-group-text" for="come-type2">居家</label>-->
+                            <label class="btn btn-secondary input-group-text" for="come-categ2">居家</label>-->
                         </div>
                     </div>
 
@@ -76,14 +76,13 @@
                     <!-- choose date -->
                     <div class="input-group mb-4 tip-group">
                         <span class="input-group-text bg-label bdy fw-bolder">日期</span>
-                        <!-- <span class="input-group-text bg-label bdy"><i class="fa fa-calendar"
-                                aria-hidden="true"></i></span> -->
-                        <input type="date" class="form-control bg-field bdy" name="date">
+                        <input type="date" class="form-control bg-field bdy" id="date" name="date">
                     </div>
 
                     <!-- submit -->
                     <div class="d-flex justify-content-center">
-                        <input class="col-2 btn-done fw-bolder text-light border-0 rounded p-2" type="submit" value="新增">
+                        <button type="submit"
+                            class="col-2 btn-done fw-bolder text-light border-0 rounded p-2">新增</button>
                     </div>
                 </div>
             </article>
@@ -101,11 +100,11 @@
 </body>
 
 <!-- 分類選項 -->
-<template id="showTypes" style="display: none;">
+<template id="showCateg" style="display: none;">
     <div class="p-2">
-        <input type="radio" class="btn-check form-check-input mx-1" name="come-type" id="come-typeN" autocomplete="off"
-            value="TYPE">
-        <label class="btn btn-secondary input-group-text" for="come-typeN">TYPE</label>
+        <input type="radio" class="btn-check form-check-input mx-1" name="come-categ" id="come-categN"
+            autocomplete="off" value="CATEG">
+        <label class="btn btn-secondary input-group-text" for="come-categN">CATEG</label>
     </div>
 </template>
 
@@ -118,11 +117,11 @@
 </template>
 
 <!-- 請輸入數字提示 -->
-<template id="ruleNum" style="display: none;">
+<!-- <template id="ruleNum" style="display: none;">
     <div class="tip">
         <i class="fa fa-exclamation-circle"></i>
         <span>請輸入數字</span>
     </div>
-</template>
+</template> -->
 
 </html>
