--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header></header>
     <nav class="d-flex justify-content-evenly my-5">
-        <a href="./input.html" class="nav-btn d-flex align-items-center justify-content-center fs-4">
+        <a href="./write.html" class="nav-btn d-flex align-items-center justify-content-center fs-4">
             <i class="fa fa-plus" aria-hidden="true"></i>
         </a>
         <a href="#" class="nav-btn-active d-flex align-items-center justify-content-center fs-4">
@@ -47,7 +47,7 @@
                     <div class="row p-2 mb-3 mx-3 fw-bold">
                         <div class="col-3 text-center">日期</div>
                         <div class="col-2 text-center">收/支</div>
-                        <div class="col-2 text-center">分類</div>
+                        <div class="col-2 text-center">類別</div>
                         <div class="col-2 text-center">金額</div>
                         <div class="col-3 text-center">備註</div>
                     </div>
@@ -60,7 +60,6 @@
                     </a> -->
                 </div>
             </article>
-
         </div>
     </section>
     <footer></footer>
