--- a/modify.html
+++ b/modify.html
@@ -36,9 +36,10 @@
                         <i class="fa fa-trash" aria-hidden="true"></i>
                     </button>
                 </div>
+
                 <div class="container rounded bg-form p-3">
                     <!-- choose categ -->
-                    <p class="mb-1 fw-bolder">分類</p>
+                    <p class="mb-1 fw-bolder">類別</p>
                     <div class="input-group mb-3 tip-group">
                         <div class="d-flex justify-content-start align-items-center flex-wrap form-control minh-150 bg-field border-0"
                             id="CATEG">
@@ -91,7 +92,7 @@
 
 </body>
 
-<!-- 分類選項 -->
+<!-- 類別選項 -->
 <template id="showCateg" style="display: none;">
     <div class="p-2">
         <input type="radio" class="btn-check form-check-input mx-1" name="come-categ" id="come-categN" autocomplete="off"
