--- a/write.html
+++ b/write.html
@@ -46,7 +46,7 @@
 
                 <div class="container rounded-bottom bg-form p-3">
                     <!-- choose categ -->
-                    <p class="mb-1 fw-bolder">分類</p>
+                    <p class="mb-1 fw-bolder">類別</p>
                     <div class="input-group mb-3 tip-group">
                         <div class="d-flex justify-content-start align-items-center flex-wrap form-control minh-150 bg-field border-0"
                             id="CATEG">
@@ -95,11 +95,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="./js/input.js"></script>
+    <script src="./js/write.js"></script>
 
 </body>
 
-<!-- 分類選項 -->
+<!-- 類別選項 -->
 <template id="showCateg" style="display: none;">
     <div class="p-2">
         <input type="radio" class="btn-check form-check-input mx-1" name="come-categ" id="come-categN"
