--- a/write.html
+++ b/write.html
@@ -38,7 +38,7 @@
             <article id="" class="my-5">
                 <!-- new income or outcome -->
                 <div class="d-flex justify-content-center">
-                    <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top" name="in-out" id="outcome"
+                    <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top bg-form" name="in-out" id="outcome"
                         value="新增支出" cSwitch="支出">
                     <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top" name="in-out" id="income"
                         value="新增收入" cSwitch="收入">
