--- a/modify.html
+++ b/modify.html
@@ -32,7 +32,7 @@
                         <i class="fa fa-arrow-left" aria-hidden="true"></i>
                     </a>
                     <div class="p-2 d-flex align-items-center justify-content-center cSwitch fw-bold">-</div>
-                    <button type="button" class="p-2 border-0 bg-transparent text-dark fs-5">
+                    <button type="button" class="p-2 border-0 bg-transparent text-dark fs-5 btn-del">
                         <i class="fa fa-trash" aria-hidden="true"></i>
                     </button>
                 </div>
