--- a/modify.html
+++ b/modify.html
@@ -63,7 +63,7 @@
                     <div class="input-group mb-3 tip-group">
                         <span class="input-group-text bg-label bdy fw-bolder">$</span>
                         <input type="number" min=1 class="form-control bg-field  bdy"
-                            aria-label="Amount (to the nearest dollar)" id="price" name="price">
+                            aria-label="Amount (to the nearest dollar)" id="price" name="price" placeholder="請輸入金額">
                     </div>
 
                     <!-- choose date -->
@@ -94,7 +94,7 @@
 
 <!-- 類別選項 -->
 <template id="showCateg" style="display: none;">
-    <div class="p-2">
+    <div class="p-2 form-check">
         <input type="radio" class="btn-check form-check-input mx-1" name="come-categ" id="come-categN" autocomplete="off"
             value="CATEF">
         <label class="btn btn-secondary input-group-text" for="come-categN">CATEG</label>
