--- a/write.html
+++ b/write.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>新增記錄</title>
@@ -38,18 +37,15 @@
             <article id="" class="my-5">
                 <!-- new income or outcome -->
                 <div class="d-flex justify-content-center">
-                    <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top bg-form" name="in-out"
-                        id="outcome" value="新增支出" cSwitch="支出">
-                    <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top" name="in-out" id="income"
-                        value="新增收入" cSwitch="收入">
+                    <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top bg-form" name="in-out" id="outcome" value="新增支出" cSwitch="支出">
+                    <input type="button" class="btn fw-bold col-6 rounded-0 rounded-top" name="in-out" id="income" value="新增收入" cSwitch="收入">
                 </div>
 
                 <div class="container rounded-bottom bg-form p-3">
                     <!-- choose categ -->
                     <p class="mb-1 fw-bolder">類別</p>
                     <div class="input-group mb-3 tip-group">
-                        <div class="d-flex justify-content-start align-items-center flex-wrap form-control minh-150 bg-field border-0"
-                            id="CATEG">
+                        <div class="d-flex justify-content-start align-items-center flex-wrap form-control minh-150 bg-field border-0" id="CATEG">
                             <!-- <div class="p-2 form-check">
                                 <input type="radio" class="btn-check form-check-input" name="come-categ"
                                     id="come-categ1" autocomplete="off" value="餐飲">
@@ -72,8 +68,7 @@
                     <!-- input price -->
                     <div class="input-group mb-3 tip-group">
                         <span class="input-group-text bg-label bdy fw-bolder">$</span>
-                        <input type="number" min=1 class="form-control bg-field  bdy"
-                            aria-label="Amount (to the nearest dollar)" id="price" name="price" placeholder="請輸入金額">
+                        <input type="number" min=1 class="form-control bg-field  bdy" aria-label="Amount (to the nearest dollar)" id="price" name="price" placeholder="請輸入金額">
                     </div>
 
                     <!-- choose date -->
@@ -84,8 +79,7 @@
 
                     <!-- submit -->
                     <div class="d-flex justify-content-center">
-                        <button type="submit"
-                            class="col-2 btn-done fw-bolder text-light border-0 rounded p-2">新增</button>
+                        <button type="submit" class="col-2 btn-done fw-bolder text-light border-0 rounded p-2">新增</button>
                     </div>
                 </div>
             </article>
@@ -95,9 +89,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./js/write.js"></script>
 
 </body>
@@ -105,8 +97,7 @@
 <!-- 類別選項 -->
 <template id="showCateg" style="display: none;">
     <div class="p-2 form-check">
-        <input type="radio" class="btn-check form-check-input mx-1" name="come-categ" id="come-categN"
-            autocomplete="off" value="CATEG">
+        <input type="radio" class="btn-check form-check-input mx-1" name="come-categ" id="come-categN" autocomplete="off" value="CATEG">
         <label class="btn btn-secondary input-group-text" for="come-categN">CATEG</label>
     </div>
 </template>
